# Pump-fun-market-scanner-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  crontab  crontab.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: crontab  crontab.example
docker/: entrypoint.sh
fixtures/: sample_coins.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_indexes.py  0003_trade_summaries_dedup.py  0004_tokens_last_seen_index.py
pump_intel/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  pipeline.py  scheduler.py
pump_intel/clients/: __init__.py  pump_client.py  pumpfun.py
pump_intel/db/: __init__.py  init_db.py  models.py  repo.py  schema.sql  session.py
pump_intel/models/: __init__.py  domain.py
pump_intel/schemas/: coin.py
pump_intel/services/: __init__.py  ai_summary.py  ai_summary_service.py  creator_intel.py  daily_report.py  daily_report_service.py  ingestion.py  ingestion_service.py  rug_detection.py  rug_detection_service.py  scoring.py  scoring_service.py  winner_classification.py  winner_classification_service.py
src/pump_intel/: __init__.py  cli.py  config.py  http.py  logging.py  pipeline.py  run_daily.py  scheduler.py  schema.sql  types.py
src/pump_intel/ai_summary/: __init__.py  service.py
src/pump_intel/arena/: __init__.py  bot.py  client.py  credentials.py  strategy.py
src/pump_intel/classification/: __init__.py  service.py
src/pump_intel/clients/: __init__.py  pump_api.py  solana_rpc.py
src/pump_intel/db/: __init__.py  connection.py  json.py  pool.py  repository.py  schema.sql
src/pump_intel/ingestion/: __init__.py  normalize.py  pump_client.py  service.py  trades.py
src/pump_intel/jobs/: daily_scan.py
src/pump_intel/reports/: __init__.py  service.py
src/pump_intel/rug_detection/: __init__.py  service.py
src/pump_intel/scheduler/: __init__.py
src/pump_intel/scoring/: __init__.py  service.py
src/pump_intel/services/: ai_summary.py  classification_bulk.py  creator_reputation.py  daily_report.py  healthcheck.py  retention.py  rug_detection.py  scoring.py  scoring_bulk.py  trade_summary_writer.py  winner_classification.py
tests/: conftest.py  test_classification.py  test_pipeline.py  test_rug_and_classify.py
tests/fixtures/: pump_coins.json
tests/integration/: conftest.py  test_daily_report_persist.py  test_ingest_end_to_end.py  test_rug_dedup.py
tests/unit/: test_arena_strategy.py  test_classification_pure.py  test_config.py  test_db_json.py  test_http_retry.py  test_logging.py  test_market_assessment.py  test_normalize.py  test_rug_detection_pure.py  test_solana_rpc_parse.py
